--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+:root {
+  --primary-color: #b88e2f;
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
+}
